fix(java8): replace Set.of() with Java 8 compatible collections and remove invalid setPermission call
- Replace Set.of() with new HashSet<>(Arrays.asList(...)) in UserQueryFilter, RoleQueryFilter, MenuQueryFilter
- Remove setPermission() call in UserServiceImpl.convertRoleToResponse() as RoleResponse lacks permission field

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>